<resources>
    <string name="app_name">My Submission App</string>
    <string name="name_title">Title:</string>
    <string name="genre_title">Genre:</string>
    <string name="studio_title">Studio:</string>
    <string name="aired_title">Aired:</string>
    <string name="rating_title">Rating:</string>
    <string name="synopsis_title">Synopsis:</string>
    <string name="self_review_title">self review</string>
    <string name="recommend_suggest_title">Would I recommend?:</string>
    <string name="my_rating_title">self rating:</string>
    <string name="image_desc">ini buat bahan percobaan saja ygy, lorem ipsum dolor sit amet</string>
    <string name="card_title">azucarrr</string>
    <string name="item_desc">This is a short description of the item.</string>
    <string-array name="anime_name_data">
        <item>Princess Principal</item>
        <item>Girls Und Panzer</item>
        <item>Kantai Collection</item>
        <item>High School Fleet</item>
        <item>86 eighty six</item>
        <item>Henjin no Salad Bowl</item>
        <item>Nihon e Youkoso Elf-san</item>
        <item>Giji Harem</item>
        <item>Zatsu Tabi: That\'s Journey</item>
        <item>Death March kara Hajimaru Isekai Kyousoukyoku</item>
    </string-array>
    <string-array name="anime_poster_image">
        <item>https://cdn.myanimelist.net/images/anime/7/86768.jpg</item>
        <item>https://cdn.myanimelist.net/images/anime/9/40969.jpg</item>
        <item>https://cdn.myanimelist.net/images/anime/4/73954.jpg</item>
        <item>https://cdn.myanimelist.net/images/anime/9/79670.jpg</item>
        <item>https://cdn.myanimelist.net/images/anime/1987/117507.jpg</item>
        <item>https://cdn.myanimelist.net/images/anime/1861/141482.jpg</item>
        <item>https://cdn.myanimelist.net/images/anime/1650/146113.jpg</item>
        <item>https://cdn.myanimelist.net/images/anime/1607/143547.jpg</item>
        <item>https://cdn.myanimelist.net/images/anime/1944/148218.jpg</item>
        <item>https://cdn.myanimelist.net/images/anime/4/88911.jpg</item>
    </string-array>
    <string-array name="anime_genre_data">
        <item>Action, Mystery, Historical</item>
        <item>Military, School</item>
        <item>Action, Sci-Fi, Military</item>
        <item>Action, Military, School</item>
        <item>Drama, Sci-Fi, Mecha, Military</item>
        <item>Comedy, Supernatural</item>
        <item>Comedy, Fantasy</item>
        <item>Comedy, Romance, School</item>
        <item>Adventure, Slice of Life</item>
        <item>Adventure, Fantasy, Harem, Isekai</item>
    </string-array>
    <string-array name="anime_studio_data">
        <item>Actas, Studio 3Hz</item>
        <item>Actas</item>
        <item>Diomedéa</item>
        <item>Production IMS</item>
        <item>A-1 Pictures</item>
        <item>SynergySP, Studio Comet</item>
        <item>Zero-G</item>
        <item>Nomad</item>
        <item>Makaria</item>
        <item>SILVER LINK., Connect</item>
    </string-array>
    <string-array name="anime_aired_data">
        <item>Jul 9, 2017 to Sep 24, 2017</item>
        <item>Oct 9, 2012 to Mar 25, 2013</item>
        <item>Jan 8, 2015 to Mar 26, 2015</item>
        <item>Apr 10, 2016 to Jun 26, 2016</item>
        <item>Apr 11, 2021 to Jun 20, 2021</item>
        <item>Apr 5, 2024 to Jun 21, 2024</item>
        <item>Jan 10, 2025 to Mar 28, 2025</item>
        <item>Jul 5, 2024 to Sep 20, 2024</item>
        <item>Apr 7, 2025 to Jun 23, 2025</item>
        <item>Jan 11, 2018 to Mar 29, 2018</item>
    </string-array>
    <string-array name="anime_rating_data">
        <item>7.67</item>
        <item>7.53</item>
        <item>6.81</item>
        <item>7.30</item>
        <item>8.34</item>
        <item>7.27</item>
        <item>7.29</item>
        <item>7.83</item>
        <item>6.92</item>
        <item>6.43</item>
    </string-array>
</resources>