<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    tools:viewBindingIgnore="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_desc"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />


        <TextView
            android:id="@+id/tv_title_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintBaseline_toBaselineOf="@+id/tv_anime_value"
            card_view:layout_constraintStart_toEndOf="@id/img_item_photo"
            card_view:layout_constraintTop_toTopOf="@id/img_item_photo"
            tools:text="@string/name_title"/>

        <TextView
            android:id="@+id/tv_anime_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            card_view:layout_constraintStart_toEndOf="@id/tv_title_label"
            card_view:layout_constraintEnd_toEndOf="parent"

            card_view:layout_constraintTop_toTopOf="@id/img_item_photo"

            tools:text="@string/card_title"
            />

        <TextView
            android:id="@+id/tv_genre_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@id/img_item_photo"
            card_view:layout_constraintTop_toBottomOf="@id/tv_title_label"

            card_view:layout_constraintBaseline_toBaselineOf="@id/tv_genre_value"
            tools:text="@string/genre_title"/>

        <TextView
            android:id="@+id/tv_genre_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            card_view:layout_constraintStart_toEndOf="@id/tv_genre_label"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_title_label"
            tools:text="@string/item_desc"
            />

        <TextView
            android:id="@+id/tv_aired_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@id/img_item_photo"
            card_view:layout_constraintTop_toBottomOf="@id/tv_genre_label"
            card_view:layout_constraintBaseline_toBaselineOf="@+id/tv_aired_value"
            tools:text="@string/aired_title" />

        <TextView
            android:id="@+id/tv_aired_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            card_view:layout_constraintStart_toEndOf="@id/tv_aired_label"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_genre_label"
            tools:text="@string/item_desc"/>

        <TextView
            android:id="@+id/tv_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@id/img_item_photo"
            card_view:layout_constraintTop_toBottomOf="@id/tv_aired_label"
            card_view:layout_constraintBaseline_toBaselineOf="@+id/tv_rating_value"
            tools:text="@string/rating_title" />

        <TextView
            android:id="@+id/tv_rating_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            card_view:layout_constraintStart_toEndOf="@id/tv_rating_label"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_aired_label"
            tools:text="@string/item_desc"/>

        <TextView
            android:id="@+id/tv_synopsis_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@id/img_item_photo"
            card_view:layout_constraintTop_toBottomOf="@id/tv_rating_label"
            card_view:layout_constraintBaseline_toBaselineOf="@+id/tv_synopsis_value"
            tools:text="@string/synopsis_title" />

        <TextView
            android:id="@+id/tv_synopsis_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            card_view:layout_constraintStart_toEndOf="@id/tv_synopsis_label"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@id/tv_rating_label"
            android:ellipsize="end"
            android:maxLines="5"
            card_view:flow_verticalBias="0.0"
            tools:text="@string/item_desc"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

